--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
 		<dt class="node"></dt>
 		<dd></dd>
 		<dt class="edge"></dt>
-		<dd></dd>
-		<dt class="colours"></dt>
 		<dd></dd>		
 		</dl>
 	</div>
@@ -72,23 +70,7 @@
 	<div id="copyright">
 		<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="images/CC.png" /></a></div>
 	</div>
-<div id="attributepane">
-<div class="text">
-	<div title="Close" class="left-close returntext"><div class="c cf"><span>Return to the full network</span></div></div>	
-<div class="headertext">
-	<span>Information Pane</span>
-</div>	
-  <div class="nodeattributes">
-    <div class="name"></div>
-	<div class="data"></div>
-    <div class="p">Connections:</div>
-    <div class="link">
-      <ul>
-      </ul>
-    </div>
-  </div>
-	</div>
-</div>
+<div id="attributepane"> </div>
 <div id="developercontainer">
 	<a href="http://www.oii.ox.ac.uk" title="Oxford Internet Institute"><div id="oii"><span>OII</span></div></a>
 	<a href="http://jisc.ac.uk" title="JISC"><div id="jisc"><span>JISC</span></div></a>	
