added roboto font

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" type="text/css" href="js/fancybox/jquery.fancybox.css"/>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
   <link rel="stylesheet" media="screen and (max-height: 770px)" href="css/tablet.css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 
@@ -53,7 +54,7 @@
         <input type="text" name="search" value="Search by name" class="empty"/><div class="state"></div>
         <div class="results"></div>
       </div>
-      <div class="cf" id="attributeselect"><h2>Filter by vote totals</h2>
+      <div class="cf" id="attributeselect"><h2>Filter by breakdown of votes</h2>
         <div class="select">Select from list</div>
 	<div class="list cf"></div>
       </div>
