--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <title>How much does the telecom industry influence congress?</title>
+<meta property="og:image" content="https://imgur.com/a/ap1RKkH">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
