added test project into GitHub

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" itemscope itemtype="http://schema.org/Map">
 
 <head>
-<title>How much does the telecom industry influence congress?</title>
-<meta property="og:image" content="https://imgur.com/a/ap1RKkH">
+<title>OII Network Visualisation Example</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no" />
@@ -35,7 +34,7 @@
     <div class="info cf">
       <dl>
         <dt class="moreinformation"></dt>
-        <dd class="line"><a href="#information" class="line fb">More about this visualization</a></dd>
+        <dd class="line"><a href="#information" class="line fb">More about this visualisation</a></dd>
       </dl>
     </div>
 <div id="legend">
@@ -45,6 +44,8 @@
 		<dt class="node"></dt>
 		<dd></dd>
 		<dt class="edge"></dt>
+		<dd></dd>
+		<dt class="colours"></dt>
 		<dd></dd>		
 		</dl>
 	</div>
@@ -54,6 +55,10 @@
       <div id="search" class="cf"><h2>Search:</h2>
         <input type="text" name="search" value="Search by name" class="empty"/><div class="state"></div>
         <div class="results"></div>
+      </div>
+      <div class="cf" id="attributeselect"><h2>Group Selector:</h2>
+        <div class="select">Select Group</div>
+	<div class="list cf"></div>
       </div>
     </form>
     </div>
