--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
   <link rel="stylesheet" media="screen and (max-height: 770px)" href="css/tablet.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
+  <link rel="shortcut icon" type="image/png" href="http://drewstanley.com/favicon.ico"/>
 </head>
 
 
@@ -44,9 +46,7 @@
 		<dt class="node"></dt>
 		<dd></dd>
 		<dt class="edge"></dt>
-		<dd></dd>
-		<dt class="colours"></dt>
-		<dd></dd>		
+		<dd></dd>	
 		</dl>
 	</div>
 </div> 
